# kubestudio

./: .dockerignore  .gitignore  .gitleaks.toml  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.scratch  PRD.md  README.md  deny.toml  index.html  index.yaml  install.sh  justfile  kubestudio-0.1.1-rc1.tgz  kubestudio-0.1.2.tgz  kubestudio-0.1.3.tgz  kubestudio-0.1.4.tgz  kubestudio-0.1.5.tgz  kubestudio-0.2.0.tgz  kubestudio-0.2.1.tgz  kubestudio-9.9.9.tgz
.cargo/: audit.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docker-multiarch.yml  helm-publish.yml  release.yml  security.yml
chart/kubestudio/: Chart.yaml  values.yaml
chart/kubestudio/templates/: _helpers.tpl  clusterrolebinding.yaml  deployment.yaml  ingress.yaml  pdb.yaml  pvc-connector-data.yaml  secret-kubeconfig.yaml  service.yaml  serviceaccount.yaml
crates/ks-core/: Cargo.toml
crates/ks-core/src/: error.rs  lib.rs
crates/ks-kube/: Cargo.toml
crates/ks-kube/src/: auth.rs  lib.rs  matrix.rs  toolbox.rs
crates/ks-kube/src/client/: apply.rs  cluster.rs  config.rs  crd.rs  drilldown.rs  exec.rs  metrics.rs  mod.rs  networking.rs  rbac.rs  storage.rs  types.rs  watch.rs  workloads.rs  yaml.rs
crates/ks-plugin/: Cargo.toml
crates/ks-plugin/src/: config.rs  executor.rs  lib.rs
crates/ks-plugin/tests/: integration.rs
crates/ks-state/: Cargo.toml
crates/ks-state/src/: lib.rs  store.rs
crates/ks-ui/: Cargo.toml
crates/ks-ui/src/: ipc.rs  lib.rs  main.rs  session.rs  theme.rs
crates/ks-ui/src/app/: crd_items.rs  helpers.rs  hotkeys.rs  mod.rs  resource_items.rs
crates/ks-ui/src/components/: action_confirm_modal.rs  apply_manifest.rs  chat_panel.rs  cluster_overview.rs  cluster_selector.rs  command_palette.rs  container_drilldown.rs  create_resource.rs  cronjob_jobs_drilldown.rs  delete_modal.rs  exec_viewer.rs  hotkeys_bar.rs  keybindings_modal.rs  log_viewer.rs  mod.rs  node_list.rs  portforward_modal.rs  portforwards_list.rs  pvc_pods_drilldown.rs  resource_list.rs  service_pods_drilldown.rs  sidebar.rs  statusbar.rs  templates.rs  tool_confirm_modal.rs  workload_pods_drilldown.rs
crates/ks-ui/src/components/yaml_viewer/: describe.rs  helpers.rs  mod.rs  secrets.rs  syntax.rs
crates/ks-ui/src/hooks/: mod.rs  use_cluster.rs  use_crds.rs  use_focus.rs  use_keyboard.rs  use_metrics.rs  use_navigation.rs  use_portforward.rs  use_resources.rs  use_watch.rs
crates/ks-ui/src/styles/: main.css
crates/ks-ui/src/utils/: mod.rs
docs/: dependency-tracking.md
