[package]
name = "ks-kube"
version.workspace = true
edition.workspace = true

[dependencies]
ks-core = { path = "../ks-core" }
kube.workspace = true
k8s-openapi.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
bytes.workspace = true
reqwest = { workspace = true, features = ["cookies"] }
anyhow.workspace = true
